--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
         "dev": "nodemon index"
     },
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
+        "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.4.1"
     },
     "devDependencies": {
